# php_bindings_rust

./: Cargo.toml
.github/workflows/: rust.yaml
php-5x/: Cargo.toml
php-5x/codegen/: Cargo.toml
php-5x/codegen/src/: lib.rs  php56.rs
php-5x/examples/: main.rs
php-5x/src/: cstr.rs  lib.rs  php56.rs  php_info.rs
php-5x/test-macros/: Cargo.toml
php-5x/test-macros/src/: lib.rs
php-5x/test-macros/src/codegen/: mod.rs  php54.rs  php56.rs
php-5x/test-macros/src/syntax/: mod.rs  module.rs
php-5x/tests/: mod.rs
sys/php-5x-sys/src/: lib.rs
sys/sys-build/src/: build_files.rs  lib.rs  phpgen.rs  wrapper.h
test_php/: Cargo.toml
test_php/src/: lib.rs
test_php_macros/: Cargo.toml
test_php_macros/pproc/: Cargo.toml
test_php_macros/pproc/src/: lib.rs
test_php_macros/src/: main.rs
