[package]
name = "php-test-macros"
version = "0.1.0"
authors = ["Paweł Chojnacki <pawel.chcki@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
proc-macro2 = "1.0"
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1.0"
php-codegen = { path = "../codegen" }
